前程无忧 单页完成

--- a/步骤.md
+++ b/步骤.md
@@ -26,6 +26,7 @@
 5. ~~`pip install diskcache`~~
 6. `pip install tinydb`
 7. `scrapy crawl ZhaopinSpider -o chongqing.json`
+8. `scrapy crawl Job51Spider`
 
 作业:
 * `scrapy genspider HuiboSpider www.huibo.com`
