--- a/步骤.md
+++ b/步骤.md
@@ -26,7 +26,7 @@
 5. ~~`pip install diskcache`~~
 6. `pip install tinydb`
 7. `scrapy crawl ZhaopinSpider -o chongqing.json`
-8. `scrapy crawl Job51Spider`
+8. `scrapy crawl Job51Spider -o Job51.json`
 
 作业:
 * `scrapy genspider HuiboSpider www.huibo.com`
