三个网站 基本完成！

--- a/步骤.md
+++ b/步骤.md
@@ -27,7 +27,10 @@
 6. `pip install tinydb`
 7. `scrapy crawl ZhaopinSpider -o chongqing.json`
 8. `scrapy crawl Job51Spider -o Job51.json`
+9. `scrapy crawl HuiboSpider`
 
 作业:
 * `scrapy genspider HuiboSpider www.huibo.com`
 * `scrapy genspider Job51Spider www.51job.com`
+
+pip install tinydb furl dateparser
